[tool.poetry]
name = "jasper"
version = "0.1.0"
description = "Tool for helping manage my home network"
authors = ["Ruslan Khyurri <ruslan.khyurri@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.9.3"
pylint = "^2.6.0"
isort = "^5.7.0"
mypy = "^0.800"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
